# LibTorchCPPExperiments

./: .gitignore  CMakeLists.txt  MINST.ipynb  README.md  SimpleNet.py  example-app.cpp
include/: CPC.h  CSVRow.h  CelebADataset.h  FractalNet.h
